--- a/Day04/style.css
+++ b/Day04/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;600;900&family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-image: linear-gradient(90deg #7d5fff, #7158e2);
+  background-image: linear-gradient(90deg, #7d5fff, #7158e2);
   font-family: "Roboto", sans-serif;
   display: flex;
   align-items: center;
@@ -42,8 +42,9 @@ body {
   width: 50px;
   transition: transform 0.3s ease;
 }
+
 .btn:focus,
-input:focus {
+.input:focus {
   outline: none;
 }
 
